<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Act1!</string>
    <string name="app_name">Context Aware Wall</string>
    <string name="main_screen">PZ Registrar</string>
    <string name="splash_screen">SplashScreen</string>
    <string name="URL">Server</string>
    <string name="port">Port</string>
    <string name="entity">User</string>
    <string name="cis">Community</string>
    <string name="Set">Set</string>
    <color name="black">#000000</color>
</resources>
